[CHORE] gradle sonarqube 파일 제외 추가